  dynafile name was generated - potential loss of messages
- improved omfile so that it properly suspends itself if there is an
  i/o or file name generation error. This enables it to be used with
  the full high availability features of rsyslog's engine
- bugfix: fixed some segaults on Solaris, where vsprintf() does not
  check for NULL pointers
---------------------------------------------------------------------------
Version 4.1.5  [DEVEL] (rgerhards), 2009-03-11
- bugfix: parser did not correctly parse fields in UDP-received messages
- added ERE support in filter conditions
  new comparison operation "ereregex"
- added new config directive $RepeatedMsgContainsOriginalMsg so that the
  "last message repeated n times" messages, if generated, may
  have an alternate format that contains the message that is being repeated
---------------------------------------------------------------------------
Version 4.1.4  [DEVEL] (rgerhards), 2009-01-29
- bugfix: inconsistent use of mutex/atomic operations could cause segfault
  details are too many, for full analysis see blog post at:
  http://blog.gerhards.net/2009/01/rsyslog-data-race-analysis.html
- bugfix: unitialized mutex was used in msg.c:getPRI
  This was subtle, because getPRI is called as part of the debugging code
  (always executed) in syslogd.c:logmsg.
- bufgix: $PreserveFQDN was not properly handled for locally emitted
  messages
---------------------------------------------------------------------------
Version 4.1.3  [DEVEL] (rgerhards), 2008-12-17
- added $InputTCPServerAddtlFrameDelimiter config directive, which
  enables to specify an additional, non-standard message delimiter
  for processing plain tcp syslog. This is primarily a fix for the invalid
  framing used in Juniper's NetScreen products. Credit to forum user
  Arv for suggesting this solution.
- added $InputTCPServerInputName property, which enables a name to be
  specified that will be available during message processing in the