@@ -34,6 +34,8 @@ Version 4.1.6  [DEVEL] (rgerhards), 2009-03-??
   the full high availability features of rsyslog's engine
 - bugfix: fixed some segaults on Solaris, where vsprintf() does not
   check for NULL pointers
+- improved performance of regexp-based filters
+  Thanks to Arnaud Cornet for providing the idea and initial patch.
 ---------------------------------------------------------------------------
 Version 4.1.5  [DEVEL] (rgerhards), 2009-03-11
 - bugfix: parser did not correctly parse fields in UDP-received messages
